fixing the z-index of social links

--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -92,6 +92,7 @@ html {
 @media (max-width: 640px) {
   .swiper {
     width: 24rem;
+    bottom: 2rem;
   }
 
   .swiper-wrapper {
